# IMDB-sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: fastapi_app.py
artifacts/baseline/: model_1756043262617156.joblib
artifacts/lora/model_1756208786086928/: model.safetensors
configs/: default.yaml
documents/: data_analysis_imdb.ipynb  question_01.md  question_02.md  question_03.md  rapport_technique.md
notebooks/: IMDB_Data_Analysis.html  IMDB_Data_Analysis.ipynb
src/data/: data.py
src/prediction/: evaluate.py  explain.py  viz_attention.py
src/training/: train_baseline.py  train_lora.py
src/utils/: ErrorHandler.py  FileManager.py  enums.py  prediction_methods.py  utils.py
